sventon change history
-----------------------------------------------------------------------------------------
[1665] Added: Feature #4464 - Add a base URL config parameter.
[1662] Fixed: Bug #17263 - Error when clicking on links in recent changes view.

[1660] Release 2.1.5 (2010-04-18)
[1649] Added: Feature #4990 - Logs search should respect startDir.
[1646] Fixed: Bug #17048 - Error during startup if JSR-250 not supported.
[1639] Added: Upgraded Compass to version 2.2.0.
[1638] Added: Upgraded SVNKit to version 1.3.2.

[1628] Release 2.1.4 (2009-10-22)
[1625] Added: Feature #4864 - JMX exposure of cache statistics.
[1625] Added: Feature #4863 - Syntax highlighting of more file formats.
[1623] Added: Upgraded SVNKit to version 1.3.1.
       Added: Upgraded trilead-ssh2 to version build213-svnkit-1.3-patch.
[1622] Fixed: Bug #16111 - No result when searching for entries.

[1605] Release 2.1.3 (2009-06-16)
[1597] Fixed: Bug #15842 - High memory consumption when populating cache.

[1588] Release 2.1.2 (2009-06-07)
[1582] Added: Upgraded to SVNKit 1.3.0 (5903).
       Fixed: Bug #15779 - SVNKit serialization problem.
[1573] Fixed: Bug #10132 - Cache does not survive SIGKILL (reopened).

[1571] Release 2.1.1 (2009-05-26)
[1561] Added: Upgraded to SVNKit 1.3.0.
[1560] Fixed: Bug #15603 - Boolean queries not possible in log search.

[1556] Release 2.1.0 (2009-04-19)
[1549] Added: Feature #4572 - Allow searching for author in log search.
[1540] Added: Feature #4551 - User based access control with caching.
[1533] Added: Feature #4522 - Case-insensitive entry search.
[1531] Added: Feature #4564 - New entry cache implementation.
[1525] Added: Feature #4565 - New log cache implementation.

[1517] Release 2.0.5 (2009-03-04)
[1514] Fixed: Bug #15311 - Does not work on WebSphere 6.1.

[1510] Release 2.0.4 (2009-02-22)
[1505] Fixed: Bug #15304 - Show latest revision info broken.

[1500] Release 2.0.3 (2009-02-18)